--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<button type="button" class="btn btn-success">Success</button>
+<app-header></app-header>
+<app-shopping-list></app-shopping-list>
+<app-recipe-item></app-recipe-item>
+<app-recipe-list></app-recipe-list>
